--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 1024px){.archive__item-excerpt{margin-top:0;font-size:0.79em !important}.btn,#goog-wm-sb,#goog-wm-sb{font-size:0.79em !important}.page__related{float:none !important;width:100% !important}.grid__item .archive__item-teaser{max-height:none !important}li>p{font-size:1em !important}}/*!
+@media only screen and (min-width: 1024px){.archive__item-excerpt{margin-top:0;font-size:0.79em !important}.btn,#goog-wm-sb,#goog-wm-sb{font-size:0.79em !important}.page__related{width:100% !important}.page__related{clear:both;float:left;padding-top:0em !important;border-top:1px solid #f2f3f3;margin-left:0;margin-right:0;width:100% !important;position:absolute;bottom:88px;height:auto;margin-top:13em !important;background-color:#fff;max-width:1220px}.grid__item .archive__item-teaser{max-height:none !important}li>p{font-size:1em !important}}.nev{color:#888}.img-tit{text-align:center;display:block}.img-tit.nev{margin-top:-20px}/*!
  * Minimal Mistakes Jekyll Theme 4.16.4 by Michael Rose
  * Copyright 2013-2019 Michael Rose - mademistakes.com | @mmistakes
  * Licensed under MIT (https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE)
